# Drone-simulation

additional_informations/gazebo_models/WRS/: model.config  model.sdf
additional_informations/gazebo_models/hexagon/: model.config
additional_informations/models/WRS/: model.config
drone_simulator/: README.md
drone_simulator/custom_teleop/src/: drone_teleop_keyboard.py  teleop_twist_keyboard.py
drone_simulator/cvg_sim_gazebo/: CMakeLists.txt  package.xml
drone_simulator/cvg_sim_gazebo/config/: base_local_planner_params.yaml
drone_simulator/cvg_sim_gazebo/launch/: amcl_demo.launch  ar_tag.launch  ardrone_testworld.launch  drone_simulation.launch  empty_world.launch  emptyworld.launch  example.launch  gmapping_demo.launch  mybot_rviz.launch  scan_data.launch  spawn_quad_wrs.launch  spawn_quadrotor.launch  test_world.launch  wrs.launch
drone_simulator/cvg_sim_gazebo/maps/: hexa.yaml  hexagon.yaml  map.yaml  opengarage.yaml  test.yaml
drone_simulator/cvg_sim_gazebo/rviz/: AmclConfig.rviz  ExampleLaserConf.rviz  GmappingConf.rviz  Hexa_CameraAddConf.rviz
drone_simulator/cvg_sim_gazebo/src/: drone_drive.cpp  drone_simulation.cpp  turtlebot3_drive.cpp
drone_simulator/cvg_sim_gazebo/urdf/: quadrotor_sensors.urdf.xacro
drone_simulator/cvg_sim_gazebo/worlds/: MBZIRC_challenge3  (+5 more)
drone_simulator/cvg_sim_gazebo_plugins/: package.xml
drone_simulator/cvg_sim_msgs/: package.xml
drone_simulator/cvg_sim_msgs/include/cvg_sim_msgs/: ControlSource.h
drone_simulator/cvg_sim_msgs/include/cvg_sim_msgs/RC/: functions.h
drone_simulator/message_to_tf/: package.xml
(+47 files in other folders)
