<?xml version="1.0"?>
<package>
  <name>cvg_sim_msgs</name>
  <version>0.0.0</version>
  <description>
	cvg_sim_msgs contains message form for cvg_sim_gazebo_plugins.
  </description>
  <maintainer email="todo@todo.todo"></maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>geometry_msgs</run_depend>

  <export>
    <cpp cflags="-I${prefix}/include"/>
  </export>
</package>
